--- a/server/.env
+++ b/server/.env
@@ -12,7 +12,7 @@
 # # Server Port
 # PORT=5003
 PORT=3000
-MONGODB_URI=mongodb://localhost:27017/health
+MONGODB_URI=mongodb+srv://manasamanasa2904_db_user:2Fn8pqUG0NJNIpNu@cluster0.zfmppsv.mongodb.net/?appName=Cluster0
 # JWT_SECRET=your-secure-jwt-secret
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 EMAIL_USER=your-email@gmail.com
